--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="error_on_recording_save">There was an error when saving your recording.\nPlease try again.</string>
     <string name="calculated_weight">Maximum weight: ~%1$s</string>
     <string name="setup_gdrive">Save recordings in Google Drive</string>
+    <string name="view_terms">View Terms Of Service</string>
 
     <plurals name="save_recording">
         <item quantity="one">Save recording of last %d minute</item>
